# ComputationTheoryWork

./: README.md  fonte.mt  main.py  main_exemplo.txt  pyproject.toml  test.py
TuringMachine/: AFD.py  State.py  main.py  state.py  transition.py  turing_machine.py  turing_machine_gui.py
src/: edge.py  state.py  turing_machine.py  turing_machine_gui.py
tests/: test_turing_machine.py
