[tool.poetry]
name = "computationtheorywork"
version = "0.1.0"
description = ""
authors = ["Marco-Antonio-Rodrigues <marcoantoniorodrigues200201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
